public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/509/source/compile
source.c: In function ‘main’:
source.c:13:13: error: expected identifier before ‘&’ token
  scanf("%d".&N);
             ^
